--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,21 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+#drum-machine {
+}
+
+#display {
+    width: 1000px;
+    height: 950px;
+    background-color: black;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.drum-pad {
+    width: 200px;
+    height: 200px;
+    background-color: grey;
+    margin: 50px;
+}
